# cmake-test

./: CMakeLists.txt
cmake/: CheckLibClangHeadersDir.cmake  FindCompilerLib.cmake  FindLibClang.cmake  LibClangDiagnosticsChecker.cpp
compilercli/: CMakeLists.txt  main.cpp
compilerlib/: CMakeLists.txt  compilerlib.cpp  compilerlib.h
compilertest/: CMakeLists.txt  main.cpp
